# chat

./: .gitignore  README.md  __init__.py  app.py  install.md  main.py  notes.txt  old.py  pyproject.toml  requirements.txt  scrape.py  test.py  web-app-reqs.txt  words.py
.cache/: api.met.noweatherapilocationforecast2.0compactlat=40.7127281lon=-74.0060152,654a68842c472e011060bd294a945711  ip-api.comjson,541f8cc137d7a7ec1adee58ac9e79d12  www.7timer.infobinastro.phplon=-74.0060152lat=40.7127281ac=0lang=enunit=metricoutput=jsont,c3ae17b7e7d0b8a0578d887a2557bdda
.cache/weather/: citycountry.json
.cache/weather/fc/xml/United States/New York/: 1679075793
templates/: index.html
