[build-system]
requires = ["hatchling","bs4","requests","lxml","textblob","imdbpy","semantic3","clrprint","mathparse","gunicorn","flask","wikipedia"]
build-backend = "hatchling.build"
[project]
name = "werdlchat"
version = "0.0.6"
authors =[
  { name="werdl", email="werdl_is_cool@outlook.com" },
]
description = "A funny chatbot"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/werdl/chat"
"Bug Tracker" = "https://github.com/werdl/chat/issues"